[package]
name = "smb_tex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
binrw = "0.10.0"
bytemuck = "1.13.0"
clap = { version = "4.1.4", features = ["derive"] }
image = "0.24.5"
walkdir = "2.3.2"
